--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -149,6 +149,7 @@ else()
    find_package(OpenCV QUIET)
    if (OpenCV_FOUND)
       include_directories(${OpenCV_INCLUDE_DIRS})
+	  message(status, "opencvdir: ${OpenCV_INCLUDE_DIRS}")
 
       add_executable(webcam_face_pose_ex webcam_face_pose_ex.cpp)
       target_link_libraries(webcam_face_pose_ex dlib::dlib ${OpenCV_LIBS} )
@@ -157,7 +158,24 @@ else()
    endif()
 endif()
 
-
+if (DLIB_NO_GUI_SUPPORT)
+    message("No GUI support, so we won't build the allen_face_landmark_detection_ex.")
+else()	
+   find_package(OpenCV QUIET)
+   if (OpenCV_FOUND)
+      include_directories(${OpenCV_INCLUDE_DIRS})
+      aux_source_directory("proto" PROTO_SRCS)
+      include_directories("proto")
+      include_directories(/usr/include)
+      #add_subdirectory("proto")
+      message(status, "opencvdir: ${OpenCV_INCLUDE_DIRS}")
+      message(status, "proto_srcs:" ${PROTO_SRCS})
+      add_executable(allen_face_landmark_detection_ex allen_face_landmark_detection_ex.cpp ${PROTO_SRCS})
+      target_link_libraries(allen_face_landmark_detection_ex dlib::dlib ${OpenCV_LIBS} /usr/lib/x86_64-linux-gnu/libprotobuf.so)
+   else()
+      message("OpenCV not found, so we won't build the allen_face_landmark_detection_ex.")
+   endif()
+endif()
 
 #here we apply our macros 
 add_gui_example(3d_point_cloud_ex)
@@ -241,7 +259,7 @@ add_example(train_shape_predictor_ex)
 add_example(using_custom_kernels_ex)
 add_gui_example(video_tracking_ex)
 add_example(xml_parser_ex)
-
+#add_gui_example(allen_face_landmark_detection_ex)
 
 if (DLIB_LINK_WITH_SQLITE3)
    add_example(sqlite_ex)
